<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC"
    tools:context=".BillGenerate">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ExtraText">

        // this is for upper profile section

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:includeFontPadding="false"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/style_my_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="38dp"

                android:fontFamily="casual"
                android:includeFontPadding="false"
                android:text="@string/style_my_space"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/enterBill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="200dp"
                android:backgroundTint="@color/black"
                android:hint="@string/enter_overall_bill"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/enterDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="270dp"
                android:backgroundTint="@color/black"
                android:inputType="date"
                android:text="@string/dd_mm_yy"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button


                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="370dp"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/white"
                android:text="@string/enter"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>