<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC"
    tools:context=".EditProfile">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ExtraText">

        // this is for upper profile section

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:padding="20dp">

            <EditText
                android:id="@+id/change_profile"
                android:layout_width="212dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="-8dp"
                android:layout_toStartOf="@+id/save_pic"
                android:layout_toEndOf="@+id/back"
                android:backgroundTint="@color/blue"
                android:text="@string/change_photo"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:includeFontPadding="false"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


            <Button

                android:id="@+id/save_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="38dp"
                android:layout_toEndOf="@id/image_2"
                android:fontFamily="casual"
                android:includeFontPadding="false"
                android:onClick="savebtn"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image_2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:src="@drawable/dp"
                tools:ignore="InvalidId" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:visibility="gone"
            android:id="@+id/showProfile">
            // xyz textfield

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:clickable="false"
                android:hint="@string/sadia_malik">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:drawableStart="@drawable/ic_baseline_insert_emoticon_24"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            //Email textfield

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:clickable="false"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            //phone no textfield
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:clickable="false"
                android:hint="@string/phone_no">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/phone"
                    android:drawableStart="@drawable/ic_baseline_local_phone_24"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            //Category name textfield

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:clickable="false"
                android:hint="@string/categories">

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ProgressBar>

</androidx.constraintlayout.widget.ConstraintLayout>