<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6DDCDCDC"
    android:orientation="vertical"
    tools:context=".ProfilePublicPrivate">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:padding="10dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/dp" />


        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_image"
            android:fontFamily="casual"
            android:includeFontPadding="false"
            android:text="@string/Mubashra"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/designer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_name"
            android:fontFamily="casual"
            android:includeFontPadding="false"
            android:text="@string/designer"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/post_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
             android:paddingTop="30dp"
            android:layout_toEndOf="@id/profile_image"
            android:fontFamily="casual"
            android:includeFontPadding="false"
            android:text="9"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/post_no"
            android:layout_marginStart="160dp"
            android:fontFamily="casual"
            android:includeFontPadding="false"
            android:text="@string/posts"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/followers_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            android:paddingTop="30dp"
            android:layout_toEndOf="@id/post_no"
            android:fontFamily="casual"
            android:includeFontPadding="false"
            android:text="@string/_20"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/followers_no"
            android:layout_marginStart="270dp"
            android:fontFamily="casual"
            android:includeFontPadding="false"
            android:text="@string/followers"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/followers_no"
            android:layout_marginStart="106dp"
            android:layout_marginTop="32dp"
            android:layout_toEndOf="@+id/profile_image"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/white"

            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/public_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Public"
            android:textColor="@color/black"
            android:background="@drawable/round_button"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/private_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="Private"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:background="@drawable/round_button"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       >

        <ImageView
            android:id="@+id/pic_1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:src="@drawable/img_3" />

        <ImageView
            android:id="@+id/pic_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:src="@drawable/img_3"
           />

        <ImageView
            android:id="@+id/pic_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/img_3"
            android:layout_marginLeft="10dp"
            android:paddingRight="10dp"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/pic_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/img_3"
            android:paddingLeft="10dp"/>

        <ImageView
            android:id="@+id/pic_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:src="@drawable/img_3"
            />

        <ImageView
            android:id="@+id/pic_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/img_3"
            android:layout_marginLeft="10dp"
            android:paddingRight="10dp"
            />



    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:background="#DCDCDC"
            app:menu="@menu/profile_public_private_menu">


        </com.google.android.material.bottomnavigation.BottomNavigationView>
    </RelativeLayout>






</LinearLayout>