<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC"
    tools:context=".ImageEditDelete">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ExtraText">

    // this is for upper profile section

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="20dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:includeFontPadding="false"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:src="@drawable/dp" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/profile_image"
            android:fontFamily="casual"
            android:includeFontPadding="false"
            android:text="@string/sadia_malik"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_centerVertical="true"
            android:src="@drawable/caption_pic" />

        <TextView
            android:id="@+id/caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_name"
           android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:text="Caption"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/edit_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/white"
            android:text="@string/edit_post"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/delete_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/white"
            android:text="@string/delete_post"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
<!--        <RelativeLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_marginTop="100dp">-->

<!--            <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--                android:id="@+id/bottom_navigation"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_alignParentBottom="true"-->
<!--                android:background="#DCDCDC"-->
<!--                app:menu="@menu/edit_delete_image_menu">-->


<!--            </com.google.android.material.bottomnavigation.BottomNavigationView>-->
<!--        </RelativeLayout>-->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>