<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Designercustomerview"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:padding="10dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/dp" />


        <TextView
            android:id="@+id/profilename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_image"
            android:fontFamily="casual"
            android:includeFontPadding="false"
            android:text="@string/Mubashra"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/designer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profilename"
            android:fontFamily="casual"
            android:includeFontPadding="false"
            android:text="@string/designer"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/post_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            android:paddingTop="30dp"
            android:layout_toEndOf="@id/profile_image"
            android:fontFamily="casual"
            android:includeFontPadding="false"
            android:text="9"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/post_no"
            android:layout_marginStart="160dp"
            android:fontFamily="casual"
            android:includeFontPadding="false"
            android:text="@string/posts"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/followers_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            android:paddingTop="30dp"
            android:layout_toEndOf="@id/post_no"
            android:fontFamily="casual"
            android:includeFontPadding="false"
            android:text="@string/_20"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/followers_no"
            android:layout_marginStart="270dp"
            android:fontFamily="casual"
            android:includeFontPadding="false"
            android:text="@string/followers"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />









    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:layout_marginTop="40dp"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/public_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="follow"
            android:onClick="showFollowSuccess"
            android:textColor="@color/black"
            android:background="@drawable/round_button"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/private_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="message"
            android:onClick="showChats"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:background="@drawable/round_button"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/imgpart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:src="@drawable/img_3" />

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/img_3" />

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:paddingRight="10dp"
                    android:src="@drawable/img_3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/pic_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:src="@drawable/img_3" />

                <ImageView
                    android:id="@+id/pic_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/img_3" />

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:paddingRight="10dp"
                    android:src="@drawable/img_3" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RatingBar
            android:layout_width="wrap_content"
            android:numStars="5"
            android:id="@+id/rating"
            android:stepSize="1"
            android:layout_height="wrap_content">
        </RatingBar>

        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit">
        </Button>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="130dp"
            android:text="review"
            android:layout_height="wrap_content"
            android:background="@color/white">
        </Button>


    </LinearLayout>

</LinearLayout>